--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,24 +23,27 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    buildFeatures {
+        dataBinding true
+    }
     packagingOptions {
         exclude 'META-INF/*.kotlin_module'
     }
     kotlinOptions {
         jvmTarget = "1.8"
     }
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -66,11 +69,11 @@ dependencies {
     implementation "org.koin:koin-ktor:$koin_version"
 
     // Ktor for Android
-    implementation "io.ktor:ktor-client-android:1.2.5"
-    // Ktor JVM(necessary for logging extension)
-    implementation "io.ktor:ktor-client-logging-jvm:1.2.5"
-    // Ktor Logging extension
-    implementation "io.ktor:ktor-client-logging:1.2.5"
-        // Necessary to show logs in logcat
-    implementation "ch.qos.logback:logback-classic:1.2.3"
+    implementation "io.ktor:ktor-client-android:1.4.0"
+
+    kapt 'com.android.databinding:compiler:3.2.0-alpha10'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8-native-mt-1.4.0-rc'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
+
 }
